--- a/desafio/d012/estilo/style.css
+++ b/desafio/d012/estilo/style.css
@@ -1,13 +1,26 @@
 @charset "UTF-8" ;
 
+@import url('https://fonts.googleapis.com/css2?family=Passion+One&display=swap');
+
+@import url('https://fonts.googleapis.com/css2?family=Sriracha&display=swap');
+
+
+:root {
+    --fonte1: Verdana, Geneva, Tahoma, sans-serif;
+    --font2: 'Passion One', cursive;
+    --fonte3: 'Sriracha', cursive;
+
+}
 
 * {
     margin: 0px;
     padding: 0px;
 }
 html, body {
+
     min-width: 100vh;
     background-color: darkgray;
+    font-family: var(--fonte1);
 }
 header {
     background-color: black;
@@ -17,6 +30,9 @@ header {
 header > h1 {
     padding-top: 50px;
     font-variant: small-caps;
+    font-family: var(--font2);
+    font-size: 3em;
+
 }
 header > p {
     padding-bottom: 50px;
@@ -35,13 +51,15 @@ section {
     padding-bottom: 10vh;
     line-height: 2em;
     padding-left: 30px;
+    font-family: var(--fonte3);
+    font-size: 3.5vw;
 }
 section.normal {
     background-color: white;
     color: black;
 }
 section.imagem > p {
-    width: 400px;
+    display: inline-block;
     background-color: black;
 
 }
