--- a/desafio/d012/estilo/style.css
+++ b/desafio/d012/estilo/style.css
@@ -52,20 +52,40 @@ section {
     line-height: 2em;
     padding-left: 30px;
     font-family: var(--fonte3);
-    font-size: 3.5vw;
 }
+section > p {
+    padding-bottom: 2em;
+}
+
 section.normal {
     background-color: white;
-    color: black;
+    color: rgb(0, 0, 0);
 }
 section.imagem > p {
     display: inline-block;
-    background-color: black;
+    padding: 5px;
+    background-color: rgba(0, 0, 0, 0.649);
+    text-shadow: 1px 1px 0px black;
 
 }
 section.imagem {
-    background-color: rgba(0, 0, 0, 0.465);
+    background-color: rgba(0, 0, 0, 0.224);
     color: white;
+    box-shadow: inset 6px 6px 13px rgba(0, 0, 0, 0.456);
+    background-size: cover;
+    background-attachment: fixed;
+
+}
+section#img01 {
+    background-image: url('../imagens/background001.jpg');
+    background-position: right center;
+    
+
+}
+section#img02 {
+    background-image: url('../imagens/background002.jpg');
+    
+
 }
 
 
